Linters applied